--- a/FrontEnd/transport.html
+++ b/FrontEnd/transport.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>My Website</title>
-    <link rel="stylesheet" type="text/css" href="../FrontEnd/CSS/index.css">
+    <link rel="stylesheet" type="text/css" href="../FrontEnd/CSS/transport.css">
     <script>
       var slideIndex = 1;
       showSlides(slideIndex);
@@ -43,10 +43,10 @@
     </header>
 
     <div class="container" id="navBar">
-      <a class="active" href="#">Home</a>
+      <a href="index.html">Home</a>
       <a href="ptv.html">Places To Visit</a>
       <a href="food.html">Food</a>
-      <a href="transport.html">Transport</a>
+      <a class="active" href="transport.html">Transport</a>
       <a href="contact.html">Contact Us</a>
     </div>
 
@@ -86,32 +86,11 @@
   <div class="slideShowC">
 
     <div class="slideShow fade">
-      <img src="Images/galway1.jpg">
+      <img src="transport.png">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
-
-    <div class="slideShow fade">
-      <img src="Images/galway2.jpg">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
-
-    <div class="slideShow fade">
-      <img src="Images/galway3.jpg">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
-
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
   </div>
-
-  <div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1)"></span>
-    <span class="dot" onclick="currentSlide(2)"></span>
-    <span class="dot" onclick="currentSlide(3)"></span>
-  </div>
-
-
 <!--
     <div class="container">
       <section id="main">
